lwcrecipies-master/force-app/main/default/objects/Configuration__mdt/Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <pluralLabel>Configuration</pluralLabel>
</CustomObject>