lwcrecipies-master/force-app/main/default/objects/Configuration__mdt/fields/Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Api_Name__c</fullName>
    <inlineHelpText>Put the field API Names Comma Separated. Like Name, Status__c, Active__c</inlineHelpText>
    <label>Field Api Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>