lwcrecipies-master/force-app/main/default/objects/Configuration__mdt/fields/No_Of_Records__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Records__c</fullName>
    <inlineHelpText>Provide how many records need to be displayed in case if the Type is Tale</inlineHelpText>
    <label>No Of Records</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>