lwcrecipies-master/force-app/main/default/objects/Configuration__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Provide the type of Metadata either you wanted to generate a Form or a Table to show the Existing Records</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Form</fullName>
                <default>true</default>
                <label>Form</label>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>